# brute-force

./: Cargo.toml  password-list.txt
src/: brute_force.rs  common_passwords.rs  main.rs  password-list.txt  password_arameters.rs  password_generator.rs  stdout_buffer.rs  user_input.rs
src/password_parameters/: combinations.rs  mod.rs  parameters.rs  password_char.rs
src/user_input/: general_prompts.rs  mod.rs  password_prompts.rs
