[package]
name = "brute-force"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
password_gen_lib = { git = "https://github.com/MarkGhebrial/password_gen_lib" } # The password generation project, but as a library